2006-05-25  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/main.cpp, tools/*.cpp, test/*.cpp: Added USING_DLL
	declarations for WIN32 compiles. Thanks to Noel and Donald Curtis
	for pointing out Cygwin problems.

	* src/Makefile.am, src/Makefile.in: Add missing -no-undefined for
	Cygwin compilation.

2006-05-24  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/dlhandler_unix.cpp (findFiles): Fix PR#1493706 problem with
	misplaced NULL terminator.

	* README: Updated to mention 2.1 development.

	* Doxyfile: Make sure to exclude src/GUI/

        * src/patty.cpp, src/typer.cpp, src/rotor.cpp, src/chains.cpp,
        src/parsmart.cpp, src/data.cpp, src/atom.cpp: Updates to fix calls
        to strcpy, replacing some static char* with std::string.

2006-05-23  Craig James <cjames@emolecules.com>

	* src/formats/smilesformat.cpp: Fixed a potential buffer
	overflow when parsing SMILES.

2006-05-21 Chris Morley <ob@gaseq.co.uk>
	
	* src/formats/xml/xml.cpp (ReadXML): Output the error 
	message from libxml2 when parser fails. Was previously seen
	in unix builds (for some reason), but not in Windows.
	
2006-05-19 Chris Morley <ob@gaseq.co.uk>
	
	* src/formats/xml/xml.cpp, xml.h (ReadStream): Simplify so that
	input chunks up to '>' are taken, rather than trying to get up
	to endtag. Remove gettomatch(). I hope this solves bug #1486678
	and allows roundtrip test to run properly (but not tried). 
	 
2006-05-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/inchi/ : Update with InChI 1.01 pre-release.

	* src/formats/inchi_api.h: Ditto.

2006-05-16 Chris Morley <ob@gaseq.co.uk>

	* src/mol.cpp: Remove BeginModify and EndModify from AddAtom(),
	 NewAtom() and AddBond(). Doesn't seem sensible to call 
	 EndModify() (which calls Kekulize()) before all the molecule
	 is there. The change should speed up conversion of large molecules.
	 This only change for this revison for easy reversion if
	 this is too drastic a change.
	 